use HostUtil to resolve address for Jeri exporter

--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -24,6 +24,7 @@ import org.dancres.blitz.serviceui.DashboardUI;
 
 import sorcer.util.Sorcer;
 import sorcer.core.SorcerConstants;
+import sorcer.provider.boot.Booter;
 
 org.dancres.blitz {
 	home = System.getProperty(SorcerConstants.S_BLITZ_HOME, "${sorcer.home}/databases");
