--- a/configs/blitz/configs/mahalo.config
+++ b/configs/blitz/configs/mahalo.config
@@ -2,6 +2,7 @@ import net.jini.jeri.tcp.TcpServerEndpoint;
 import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import sorcer.util.Sorcer;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.mahalo{
 
