--- a/configs/jini/configs/fiddler.config
+++ b/configs/jini/configs/fiddler.config
@@ -5,6 +5,7 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.provider.boot.Booter;
 import sorcer.util.Sorcer;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.fiddler {
     initialLookupGroups = Sorcer.getLookupGroups();
