--- a/configs/jini/configs/mahalo-boot.config
+++ b/configs/jini/configs/mahalo-boot.config
@@ -6,6 +6,7 @@ import net.jini.lookup.entry.*;
 import sorcer.util.Sorcer;
 import com.sun.jini.config.ConfigUtil;
 import java.util.Arrays;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.mahalo {
     name = Sorcer.getActualName("Transaction Manager");
@@ -20,5 +21,5 @@ com.sun.jini.mahalo {
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
