--- a/configs/jini/configs/outrigger.config
+++ b/configs/jini/configs/outrigger.config
@@ -11,5 +11,5 @@ com.sun.jini.outrigger {
     hostName = Booter.getHostName();
     name = Sorcer.getActualName("Exert Space");
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
