--- a/configs/jini/scripts/services/reggie/persistent-reggie.config
+++ b/configs/jini/scripts/services/reggie/persistent-reggie.config
@@ -2,12 +2,13 @@ import net.jini.id.UuidFactory;
 import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.jeri.tcp.TcpServerEndpoint;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.reggie {
     initialMemberGroups = new String[] { "${INITIAL_LOOKUP_GROUP}" };
     persistenceDirectory = "${LOG_DIR}/reggie.log";
     serverExporter = new BasicJeriExporter(
-	TcpServerEndpoint.getInstance(5505),
+	TcpServerEndpoint.getInstance(Booter.getHostAddress(), 5505),
 	new BasicILFactory(),
 	false,
 	true,
