--- a/configs/sos-providers/exerter-prv.config
+++ b/configs/sos-providers/exerter-prv.config
@@ -12,6 +12,7 @@ import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
 import sorcer.util.ExertProcessor;
 import sorcer.service.Exerter;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
@@ -25,7 +26,7 @@ sorcer.core.provider.ServiceProvider {
 		
 		// persist and reuse service ID
 		providerIdPersistent = false;
-		exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+		exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 		
 		// service beans
 		beanClasses = new Class[] { sorcer.util.ExertProcessor.class };
