--- a/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt2-prv.config
+++ b/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt2-prv.config
@@ -8,6 +8,7 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.ex1.provider.*;
 import java.util.logging.Level;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
 		name="XYZ";
@@ -32,7 +33,7 @@ sorcer.core.provider.ServiceProvider {
 		remoteContextLogging = true;
 		remoteProviderLogging = true;
 			
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
         
         iconName="sorcer-ico-bw.png";
 }
