--- a/examples/ex1/run-prv/configs/whoIsIt-prv.config
+++ b/examples/ex1/run-prv/configs/whoIsIt-prv.config
@@ -7,6 +7,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.ex1.*;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
 		name="WhoIsIt?";
@@ -20,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 		publishedInterfaces = new Class[] { sorcer.ex1.WhoIsIt.class };
 		spaceEnabled = true;
 		
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
 	
 
