--- a/examples/ex2/ex2-prv/src/main/resources/config/worker2-prv.config
+++ b/examples/ex2/ex2-prv/src/main/resources/config/worker2-prv.config
@@ -7,6 +7,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.ex1.provider.*;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
 		name="Worker2";
@@ -17,7 +18,7 @@ sorcer.core.provider.ServiceProvider {
 			new Comment("Implements Worker interface with three operations"), 
 			new Location("", "", "Sorcersoft.com") };
 			
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
         
         spaceEnabled = true;
         
