--- a/configs/blitz/configs/phoenix-group.config
+++ b/configs/blitz/configs/phoenix-group.config
@@ -2,6 +2,7 @@
 import net.jini.jeri.tcp.TcpServerEndpoint;
 import com.sun.jini.phoenix.AccessILFactory;
 import net.jini.jeri.BasicJeriExporter;
+import sorcer.provider.boot.Booter;
 
 
 com.sun.jini.phoenix {
