--- a/configs/jini/configs/mahalo.config
+++ b/configs/jini/configs/mahalo.config
@@ -5,11 +5,12 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.provider.boot.Booter;
 import sorcer.util.Sorcer;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.mahalo {
     name = Sorcer.getActualName("Transaction Manager");
     initialLookupGroups = Sorcer.getLookupGroups();
     hostName = Booter.getHostName();
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
