--- a/configs/jini/configs/outrigger-boot.config
+++ b/configs/jini/configs/outrigger-boot.config
@@ -6,6 +6,7 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.util.Sorcer;
 import java.util.Arrays;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.outrigger {
     name = Sorcer.getActualName("Exert Space");
@@ -20,5 +21,5 @@ com.sun.jini.outrigger {
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
