--- a/configs/jini/configs/reggie-boot.config
+++ b/configs/jini/configs/reggie-boot.config
@@ -6,6 +6,7 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.util.Sorcer;
 import java.util.Arrays;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.reggie {
     name = Sorcer.getActualName("Service Registry");
@@ -19,5 +20,5 @@ com.sun.jini.reggie {
     //initialLookupLocators
     //initialUnicastDiscoveryPort
    
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
