--- a/configs/jini/configs/reggie.config
+++ b/configs/jini/configs/reggie.config
@@ -15,6 +15,6 @@ com.sun.jini.reggie {
     //initialUnicastDiscoveryPort
    
 //    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 
 }
