--- a/configs/jini/scripts/services/fiddler/persistent-fiddler.config
+++ b/configs/jini/scripts/services/fiddler/persistent-fiddler.config
@@ -2,12 +2,13 @@ import net.jini.id.UuidFactory;
 import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.jeri.tcp.TcpServerEndpoint;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.fiddler {
     initialLookupGroups = new String[] { "${INITIAL_LOOKUP_GROUP}" };
     persistenceDirectory = "${LOG_DIR}/fiddler.log";
     serverExporter = new BasicJeriExporter(
-	TcpServerEndpoint.getInstance(5500),
+	TcpServerEndpoint.getInstance(Booter.getHostAddress(), 5500),
 	new BasicILFactory(),
 	false,
 	true,
