--- a/configs/jini/scripts/services/mahalo/persistent-mahalo.config
+++ b/configs/jini/scripts/services/mahalo/persistent-mahalo.config
@@ -2,12 +2,13 @@ import net.jini.id.UuidFactory;
 import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.jeri.tcp.TcpServerEndpoint;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.mahalo {
     initialLookupGroups = new String[] { "${INITIAL_LOOKUP_GROUP}" };
     persistenceDirectory = "${LOG_DIR}/mahalo.log";
     serverExporter = new BasicJeriExporter(
-	TcpServerEndpoint.getInstance(5501),
+	TcpServerEndpoint.getInstance(Booter.getHostAddress(), 5501),
 	new BasicILFactory(),
 	false,
 	true,
