--- a/configs/jini/scripts/services/mercury/persistent-mercury.config
+++ b/configs/jini/scripts/services/mercury/persistent-mercury.config
@@ -2,12 +2,13 @@ import net.jini.id.UuidFactory;
 import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.jeri.tcp.TcpServerEndpoint;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.mercury {
     initialLookupGroups = new String[] { "${INITIAL_LOOKUP_GROUP}" };
     persistenceDirectory = "${LOG_DIR}/mercury.log";
     serverExporter = new BasicJeriExporter(
-	TcpServerEndpoint.getInstance(5502),
+	TcpServerEndpoint.getInstance(Booter.getHostAddress(), 5502),
 	new BasicILFactory(),
 	false,
 	true,
