--- a/configs/jini/scripts/services/norm/persistent-norm.config
+++ b/configs/jini/scripts/services/norm/persistent-norm.config
@@ -2,12 +2,13 @@ import net.jini.id.UuidFactory;
 import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.jeri.tcp.TcpServerEndpoint;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.norm {
     initialLookupGroups = new String[] { "${INITIAL_LOOKUP_GROUP}" };
     persistenceDirectory = "${LOG_DIR}/norm.log";
     serverExporter = new BasicJeriExporter(
-	TcpServerEndpoint.getInstance(5503),
+	TcpServerEndpoint.getInstance(Booter.getHostAddress(), 5503),
 	new BasicILFactory(),
 	false,
 	true,
