--- a/configs/jini/scripts/services/outrigger/persistent-outrigger.config
+++ b/configs/jini/scripts/services/outrigger/persistent-outrigger.config
@@ -2,12 +2,13 @@ import net.jini.id.UuidFactory;
 import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.jeri.tcp.TcpServerEndpoint;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.outrigger {
     initialLookupGroups = new String[] { "${INITIAL_LOOKUP_GROUP}" };
     persistenceDirectory = "${LOG_DIR}/outrigger.log";
     serverExporter = new BasicJeriExporter(
-	TcpServerEndpoint.getInstance(5504),
+	TcpServerEndpoint.getInstance(Booter.getHostAddress(), 5504),
 	new BasicILFactory(),
 	false,
 	true,
