--- a/examples/ex1/run-prv/configs/whoIsIt1-prv.config
+++ b/examples/ex1/run-prv/configs/whoIsIt1-prv.config
@@ -7,6 +7,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.ex1.*;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
 		name="ABC";
@@ -25,7 +26,7 @@ sorcer.core.provider.ServiceProvider {
 		
 		//lookupGroups = new String[] { "sorcer.TEST10" };
 		
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
 	
 
