--- a/examples/ex1/run-prv/configs/whoIsIt2-prv.config
+++ b/examples/ex1/run-prv/configs/whoIsIt2-prv.config
@@ -7,6 +7,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.ex1.*;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
 		name="XYZ";
@@ -23,7 +24,7 @@ sorcer.core.provider.ServiceProvider {
 		workersTransactional = false;	
 		//workerCount = 2;	
 			
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
 	
 
