--- a/sos-providers/cataloger/cataloger-prv/src/main/resources/config/services.config
+++ b/sos-providers/cataloger/cataloger-prv/src/main/resources/config/services.config
@@ -4,7 +4,7 @@ import net.jini.jeri.tcp.*;
 import net.jini.core.entry.*;
 import net.jini.lookup.entry.*;
 import sorcer.core.*;
-
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider  {
 		name = "Cataloger";
@@ -18,7 +18,7 @@ sorcer.core.provider.ServiceProvider  {
 
         // if not declared the default exporter is BasicJeriExporter
         // exporter = new JrmpExporter(0);
-        // exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
         
          iconName="sorcer-ico.png";
 }
