--- a/sos-providers/dbp/dbp-prv/src/main/resources/config/dbp.config
+++ b/sos-providers/dbp/dbp-prv/src/main/resources/config/dbp.config
@@ -9,6 +9,7 @@ import net.jini.lookup.entry.*;
 import sorcer.core.provider.sdb.*;
 import sorcer.service.*;
 import sorcer.util.*;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
     // application-specific service provider properties
@@ -27,7 +28,7 @@ sorcer.core.provider.ServiceProvider {
     
     // if not declared the default exporter is BasicJeriExporter
     //exporter = new JrmpExporter(0);
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
     
     spaceEnabled = false;
     		
