--- a/sos-providers/exertmonitor/exertmonitor-prv/src/main/resources/config/services.config
+++ b/sos-providers/exertmonitor/exertmonitor-prv/src/main/resources/config/services.config
@@ -7,6 +7,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.exertmonitor.*;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
     // application-specific service provider properties
@@ -21,7 +22,7 @@ sorcer.core.provider.ServiceProvider {
 	
 	// if not declared the default exporter is BasicJeriExporter
 	//exporter = new JrmpExporter(0);
-	exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+	exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 	
 	//Exertion Space (JavaSpaces configuration) not required for Exertion Monitoring
 	spaceEnabled = false;
