--- a/sos-providers/logger/logger-prv/src/main/resources/config/logger.config
+++ b/sos-providers/logger/logger-prv/src/main/resources/config/logger.config
@@ -13,6 +13,7 @@ import sorcer.core.provider.ServiceProvider;
 import sorcer.core.provider.ui.*;
 import sorcer.core.provider.logger.*;
 import org.wonderly.util.jini.*;
+import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
@@ -25,7 +26,7 @@ sorcer.core.provider.ServiceProvider {
 
 	// if not declared the default exporter is BasicJeriExporter
     	//exporter = new JrmpExporter(0);
-    	exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    	exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
     
     	//Exertion Space (JavaSpaces configuration) not required for Loggers
     	spaceEnabled = false;
