--- a/tools/browser/configs/ssb.config
+++ b/tools/browser/configs/ssb.config
@@ -2,6 +2,7 @@ import net.jini.jeri.*;
 import net.jini.jeri.tcp.*;
 import net.jini.discovery.*;
 import net.jini.core.discovery.*;
+import sorcer.provider.boot.Booter;
 
 sorcer.sbb.browser.SorcerServiceBrowser {
 
@@ -14,7 +15,7 @@ sorcer.sbb.browser.SorcerServiceBrowser {
     //initialLookupGroups = new String[] { "sorcer.DEV" };
     //initialLookupLocators = new LookupLocator[] { new LookupLocator("127.0.0.1", 4185) };
     //discoveryManager = new LookupDiscoveryManager(DiscoveryGroupManagement.NO_GROUPS, null, null);
-    //listenerExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(4162), new BasicILFactory());
+    //listenerExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 4162), new BasicILFactory());
     //websterStartPort = 4177;
     //websterEndPort = 4180;
     //allowDestroy = true;
