--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<artifactId>sos</artifactId>
+		<artifactId>sorcer</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
