make services export their proxies using address from HostUtil

--- a/configs/blitz/configs/reggie.config
+++ b/configs/blitz/configs/reggie.config
@@ -7,7 +7,7 @@ import sorcer.provider.boot.Booter;
 com.sun.jini.reggie{
 
 	initialLookupGroups = Sorcer.getGroups();
-	//host = Env.getHostName();
+	host = Booter.getHostAddress();
 	
-	//serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(host, 0), new BasicILFactory());
+	serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(host, 0), new BasicILFactory());
 }
