--- a/configs/jini/configs/jiniservices.config
+++ b/configs/jini/configs/jiniservices.config
@@ -3,10 +3,11 @@ import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import com.sun.jini.config.ConfigUtil;
 import sorcer.util.Sorcer;
+import sorcer.provider.boot.Booter;
 
 root {
   	groups = Sorcer.getGroups();
-  	host = Sorcer.getHostName();
+  	host = Booter.getHostAddress();
 }
 
 com.sun.jini.reggie {
