--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -176,7 +176,7 @@ org.dancres.blitz {
 
     // The exporter to use - see the JINI documentation
     //
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0),
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0),
                          new ProxyTrustILFactory(null, null), false, true);
 
     // Blitz provides a suitable default for all these but this is how you'd
