--- a/configs/blitz/configs/phoenix-group.config
+++ b/configs/blitz/configs/phoenix-group.config
@@ -8,7 +8,7 @@ import sorcer.provider.boot.Booter;
 com.sun.jini.phoenix {
 
     instantiatorExporter =  
-    				new BasicJeriExporter(TcpServerEndpoint.getInstance(0),
+    				new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0),
              new AccessILFactory(),false,true);
    
 }
