--- a/configs/jini/configs/fiddler.config
+++ b/configs/jini/configs/fiddler.config
@@ -5,12 +5,11 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.provider.boot.Booter;
 import sorcer.util.Sorcer;
-import sorcer.provider.boot.Booter;
 
 com.sun.jini.fiddler {
     initialLookupGroups = Sorcer.getLookupGroups();
     hostName = Booter.getHostName();
     name = Sorcer.getActualName("Lookup Discovery Service");
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
 }
