extract Launcher module with code common for both maven and eclipse plugin

--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -21,6 +21,7 @@
 		<module>sos-boot</module>
 		<module>sos-shell</module>
 		<module>browser</module>
+        <module>sorcer-launcher</module>
 		<module>sorcer-maven-plugin</module>
 		<module>sorcer-provider</module>
 	<!--	<module>provider-root</module>-->
