--- a/tools/sorcer-maven-plugin/pom.xml
+++ b/tools/sorcer-maven-plugin/pom.xml
@@ -53,6 +53,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-launcher</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-webster</artifactId>
 			<version>${project.version}</version>
 		</dependency>
