--- a/sos/sos-util/pom.xml
+++ b/sos/sos-util/pom.xml
@@ -12,7 +12,26 @@
 
     <artifactId>sos-util</artifactId>
     <name>SORCER OS :: sos-util</name>
+    <description>This module contain util that don't depend on any other modules (classes may depend only on JDK classes
+        or other classes in this module) and are potentially usable outside core Sorcer.
+    </description>
 
-    <dependencies>
-    </dependencies>
+    <!-- Please do not add any dependencies -->
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Export-Package>sorcer.util</Export-Package>
+                        <Import-Package>sorcer.util</Import-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
