--- a/sos/sos-env/pom.xml
+++ b/sos/sos-env/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>sos-env</artifactId>
     <name>SORCER OS :: env</name>
     <url>http://sorcersoft.org/</url>
-    <description>Service ORiented Computing EnviRonment</description>
+    <packaging>bundle</packaging>
 
     <build>
         <resources>
@@ -21,6 +21,18 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Export-Package>sorcer.core,sorcer.service</Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
