--- a/tools/sorcer-launcher/pom.xml
+++ b/tools/sorcer-launcher/pom.xml
@@ -11,7 +11,23 @@
 
     <artifactId>sorcer-launcher</artifactId>
     <name>SORCER Tools :: Launcher</name>
-    <description>Code helping to launch Sorcer server (provider) and client (requestor) processes; to be used by other Sorcer tools. Do not confuse it with sos-boot which contains classes internal for the server process, i.e. the main class for server (ServiceStarter).</description>
+    <packaging>bundle</packaging>
+    <description>Helper classes for launching Sorcer server (provider) and client (requestor) processes; to be used by other Sorcer tools. Do not confuse it with sos-boot which contains classes internal to the server process, i.e. the main class for server (ServiceStarter) or with ServiceRequestor helper 'main' class for clients.</description>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Export-Package>sorcer.launcher</Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
