Fixed NSH - added possibility of loading jars from remote hosts and remote maven repos etc.

--- a/configs/blitz/configs/mahalo.config
+++ b/configs/blitz/configs/mahalo.config
@@ -7,6 +7,7 @@ import sorcer.provider.boot.Booter;
 com.sun.jini.mahalo{
 
 	initialLookupGroups = Sorcer.getGroups();
+	//host = Booter.getHostAddress();
 	//host = Env.getHostName();
 	
 	//serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(host, 0), new BasicILFactory());
