--- a/configs/jini/configs/reggie.config
+++ b/configs/jini/configs/reggie.config
@@ -9,7 +9,8 @@ import sorcer.util.Sorcer;
 com.sun.jini.reggie {
     name = Sorcer.getActualName("Service Registry");
     initialMemberGroups = Sorcer.getLookupGroups();
-    hostName = Booter.getHostName();
+    //hostName = Booter.getHostName();
+    hostName = Booter.getHostAddress();
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     //initialLookupLocators
     //initialUnicastDiscoveryPort
