--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -7,22 +7,35 @@
 ## Note: do not add classes from java.lang here. No rt.jar and on some
 ##       platforms no tools.jar
 ##
-## See http://groovy.codehaus.org/api/org/codehaus/groovy/tools/LoaderConfiguration.html
-## for the file format
-## !{mvn: } allows to specify artifact coordinates in the format: groupId:Artifact:[version]
+## load file://file.jar - specifies a local file, you may use system properties or wildcards in the path, i.e:
+## load file://!{user.home}/.nsh/lib/*.jar
+## load mvn://groupId:Artifact:[version] - specifies local jar file to loaded from local maven repository using artifact coordinates in the format:
+## load mvn://groupId:Artifact:[version]@host:port - specifies a jar file on a remote maven repository
+## load http:// - specifies remote jar file using a direct URL
+
+## Examples of how you can specify a jar to be loaded
+## Possible ways of specifying libraries
+## load mvn://org.sorcersoft.sorcer:ex6-api
+## load mvn://org.sorcersoft.sorcer:ex6-api@192.168.0.15:8000
+## load http://192.168.0.15:9000/sorcer/sos-env.jar
+## load file://!{user.home}/.nsh/lib/*.jar
+
 
     # load required libraries
-    
-    load !{mvn:org.sorcersoft.sorcer:sos-shell}
-    load !{mvn:org.sorcersoft.sorcer:sos-platform}
-    load !{mvn:org.sorcersoft.sorcer:sos-util}
-    load !{mvn:org.codehaus.groovy:groovy-all}
-    load !{mvn:net.jini.lookup:serviceui}
-    load !{mvn:org.rioproject:rio-platform}
-    load !{mvn:org.sorcersoft.sorcer:ex6-api}
+
+    load mvn://org.sorcersoft.sorcer:sos-shell
+    load mvn://org.sorcersoft.sorcer:sos-platform
+    load mvn://org.sorcersoft.sorcer:sos-util
+    load mvn://org.codehaus.groovy:groovy-all
+    load mvn://net.jini.lookup:serviceui
+    load mvn://org.rioproject:rio-platform
+    #load mvn://org.sorcersoft.sorcer:ex6-api
+
+
     
     # load user specific libraries
     load !{user.home}/.nsh/lib/*.jar
     
     # tools.jar for ant tasks
     # load ${tools.jar}
+
