Fixed confusing signatures

--- a/configs/browser/configs/ssb.config
+++ b/configs/browser/configs/ssb.config
@@ -10,7 +10,7 @@ sorcer.sbb.browser.SorcerServiceBrowser {
 	// the specified 'initialLookupGroups". However, in the latter
 	// additional runtime lookup locators can be added using 'Tools/Unicast discovery...'.
 
-    //initialLookupGroups = new String[] { "sorcer.TEST-DEV" };
+    initialLookupGroups = new String[] { "sorcer.TEST-MWS" };
     
     //initialLookupLocators = new LookupLocator[] { new LookupLocator("127.0.0.1", 4185) };
     
