--- a/configs/sos-providers/cataloger.config
+++ b/configs/sos-providers/cataloger.config
@@ -18,7 +18,7 @@ sorcer.core.provider.ServiceProvider  {
 
         // if not declared the default exporter is BasicJeriExporter
         // exporter = new JrmpExporter(0);
-        // exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+         exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
         
          iconName="sorcer-ico.png";
 }
