--- a/sos-providers/cataloger/cataloger-prv/src/main/resources/config/services.config
+++ b/sos-providers/cataloger/cataloger-prv/src/main/resources/config/services.config
@@ -1,26 +1,50 @@
-import net.jini.jrmp.*;
-import net.jini.jeri.*;
-import net.jini.jeri.tcp.*;
-import net.jini.core.entry.*;
-import net.jini.lookup.entry.*;
-import sorcer.core.*;
+import java.net.URL;
+import com.sun.jini.start.ServiceDescriptor;
+import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
+import sorcer.provider.boot.SorcerDescriptorUtil;
+import sorcer.provider.boot.SorcerServiceDescriptor;
 
-sorcer.core.provider.ServiceProvider  {
-		name = "Cataloger";
-		publishedInterfaces = new Class[] { sorcer.core.Cataloger.class };
-		description = "Dynamic catalog of SORCER service providers";
-		location = "Sorcersoft.com Lab";
-		spaceEnabled = false;
-		entries = new Entry[] { 
-			new Comment("Welcome to exertion-oriented programming!"), 
-			new Location("", "", "Sorcersoft.com") };
+import sorcer.resolver.Resolver;
+import sorcer.core.SorcerEnv;
 
-        // if not declared the default exporter is BasicJeriExporter
-        // exporter = new JrmpExporter(0);
-        exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
-        
-         iconName="sorcer-ico.png";
+com.sun.jini.start {
+    home = "${sorcer.home}";
+    policy = "${java.security.policy}";
+    ps = System.getProperty("path.separator");
+     
+    //port = Booter.getWebsterPort();
+    port = 0;
+    //address = Booter.getWebsterInterface();
+    //startPort = Booter.getWebsterStartPort();
+    //endPort = Booter.getWebsterEndPort();
+
+    standardProviderCodebase = Booter.resolveCodebase(new String[]{
+        "org.sorcersoft.sorcer:sos-platform",
+        "org.sorcersoft.sorcer:sos-exertlet-sui",
+        "net.jini.lookup:serviceui"
+    });
+
+    serviceDescriptors = new ServiceDescriptor[] {
+        /* SORCER Webster, set to serve up lib directories */
+  	    /*new SorcerServiceDescriptor(
+            null,
+   			policy,
+            Booter.resolveClasspath("org.sorcersoft.sorcer:sos-webster"),
+			"sorcer.tools.webster.Webster", 
+			new String[] { home + "/configs/webster/configs/webster-prv.config" }
+        ),*/
+
+        // SORCER Catalog Service
+        new SorcerServiceDescriptor(
+            standardProviderCodebase,
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:commons-prv",
+                "org.sorcersoft.sorcer:cataloger-prv"
+            }),
+            "sorcer.core.provider.cataloger.ServiceCataloger",
+            new String[]{ home + "/configs/sos-providers/cataloger.config" }
+        )
+    };
 }
-
-
