--- a/examples/ex2/ex2-prv/pom.xml
+++ b/examples/ex2/ex2-prv/pom.xml
@@ -19,7 +19,12 @@
             <artifactId>sos-platform</artifactId>
         	<version>${v.sorcer}</version>
         </dependency>
-		<dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-boot</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
+        <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>ex2-api</artifactId>
             <version>${project.version}</version>	
