--- a/sos-providers/jobber/jobber-prv/pom.xml
+++ b/sos-providers/jobber/jobber-prv/pom.xml
@@ -21,9 +21,15 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         	<version>${project.version}</version>
-        </dependency>        <dependency>
+        </dependency>
+        <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-util</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
