--- a/sos-providers/jobber/jobber-prv/src/main/resources/config/services.config
+++ b/sos-providers/jobber/jobber-prv/src/main/resources/config/services.config
@@ -1,38 +1,50 @@
-/** Sorcer Jobber configuration file */
-
-import net.jini.jrmp.*;
-import net.jini.jeri.*;
-import net.jini.jeri.tcp.*;
-import sorcer.core.*;
-import net.jini.core.entry.Entry;
-import net.jini.lookup.entry.*;
-import sorcer.util.Sorcer;
+import java.net.URL;
+import com.sun.jini.start.ServiceDescriptor;
+import com.sun.jini.config.ConfigUtil;
 import sorcer.provider.boot.Booter;
+import sorcer.provider.boot.SorcerDescriptorUtil;
+import sorcer.provider.boot.SorcerServiceDescriptor;
 
-sorcer.core.provider.ServiceProvider {
-    // application-specific service provider properties
-    //properties = "../configs/jobber-prv.properties";
-    
-    name="Jobber";
-    // use this provider name suffixed with the user name
-    // overrides the sorce.env property  sorcer.provider.name.suffixed
-    // nameSuffixed = "false";
-    // nameSuffixed = "MS";
-		
-    publishedInterfaces = new Class[] { sorcer.service.Jobber.class };
-    description = "SORCER Exertion Execution service with the PUSH flow control";
-    entries = new Entry[] { 
-		new Comment("Welcome to exertion-oriented programming!"), 
-		new Location("", "", "Sorcersoft.com") };
-	
-    // if not declared the default exporter is BasicJeriExporter
-    //exporter = new JrmpExporter(0);
-    exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
-    
- 	// Exertion Space (JavaSpaces configuration)
-    spaceEnabled = false;
-    		
-    iconName="sorcer-ico.png";
+import sorcer.resolver.Resolver;
+import sorcer.core.SorcerEnv;
+
+com.sun.jini.start {
+    home = "${sorcer.home}";
+    policy = "${java.security.policy}";
+    ps = System.getProperty("path.separator");
+     
+    //port = Booter.getWebsterPort();
+    port = 0;
+    //address = Booter.getWebsterInterface();
+    //startPort = Booter.getWebsterStartPort();
+    //endPort = Booter.getWebsterEndPort();
+
+    standardProviderCodebase = Booter.resolveCodebase(new String[]{
+        "org.sorcersoft.sorcer:sos-platform",
+        "org.sorcersoft.sorcer:sos-exertlet-sui",
+        "net.jini.lookup:serviceui"
+    });
+
+    serviceDescriptors = new ServiceDescriptor[] {
+        /* SORCER Webster, set to serve up lib directories */
+  	    /*new SorcerServiceDescriptor(
+            null,
+   			policy,
+            Booter.resolveClasspath("org.sorcersoft.sorcer:sos-webster"),
+			"sorcer.tools.webster.Webster", 
+			new String[] { home + "/configs/webster/configs/webster-prv.config" }
+        ),*/
+
+        // SORCER Jobber Service
+        new SorcerServiceDescriptor(
+            standardProviderCodebase,
+            policy,
+            Booter.resolveClasspath(new String[]{
+                "org.sorcersoft.sorcer:commons-prv",
+                "org.sorcersoft.sorcer:jobber-prv"
+            }),
+            "sorcer.core.provider.jobber.ServiceJobber",
+            new String[]{ home + "/configs/sos-providers/jobber.config" }
+        )
+    };
 }
-	
-
