Added generating example UI to archetype

--- a/examples/first/first-prv/src/main/resources/config/SampleService.config
+++ b/examples/first/first-prv/src/main/resources/config/SampleService.config
@@ -9,6 +9,7 @@ import sorcer.core.*;
 import sorcer.jini.jeri.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
+import com.example.sorcer.ui.SampleUI;
 
 sorcer.core.provider.ServiceProvider {
 	/* service provider generic properties */
@@ -18,6 +19,10 @@ sorcer.core.provider.ServiceProvider {
 	// service beans
 	beanClasses = new Class[] { com.example.sorcer.SampleServiceImpl.class };
 	iconName="/config/sorcer.png";
+
+    entries = new Entry[] {
+        SampleUI.getUIDescriptor()
+    };
 
 	monitorEnabled = false;
     spaceEnabled = false;
