--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/__providerInterface__.config
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/__providerInterface__.config
@@ -9,6 +9,7 @@ import sorcer.core.*;
 import sorcer.jini.jeri.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
+import ${package}.${providerClass}UI;
 
 sorcer.core.provider.ServiceProvider {
 	/* service provider generic properties */
@@ -18,6 +19,10 @@ sorcer.core.provider.ServiceProvider {
 	// service beans
 	beanClasses = new Class[] { ${package}.${providerClass}.class };
 	iconName="${serviceIcon}";
+
+	entries = new Entry[] {
+        ${providerClass}UI.getUIDescriptor()
+    };
 
 	monitorEnabled = ${usesMonitor};
     spaceEnabled = ${usesSpacer};
