--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
@@ -17,11 +17,13 @@ com.sun.jini.start {
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
 				"${groupId}:${rootArtifactId}-api:${version}",
+			    "${groupId}:${rootArtifactId}-sui:${version}",
 				"org.sorcersoft.sorcer:sos-platform"
 			}),
 			policy,
 			Booter.resolveClasspath(new String[]{
 				"${groupId}:${rootArtifactId}-api:${version}",
+			    "${groupId}:${rootArtifactId}-sui:${version}",
 				"${groupId}:${rootArtifactId}-prv:${version}"
 			}),
 			"sorcer.core.provider.ServiceTasker",
