--- a/examples/first/first-prv/src/main/resources/config/services.config
+++ b/examples/first/first-prv/src/main/resources/config/services.config
@@ -9,13 +9,14 @@ com.sun.jini.start {
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
                 "com.example.sorcer:first-api:1.0-SNAPSHOT",
-//				"net.jini.lookup:serviceui",
+                "com.example.sorcer:first-sui:1.0-SNAPSHOT",
                 "org.sorcersoft.sorcer:sos-platform"
             }),
 			policy,
 			Booter.resolveClasspath(new String[]{
                 "com.example.sorcer:first-api:1.0-SNAPSHOT",
-                "com.example.sorcer:first-prv:1.0-SNAPSHOT"
+                "com.example.sorcer:first-prv:1.0-SNAPSHOT",
+                "com.example.sorcer:first-sui:1.0-SNAPSHOT"
             }),
 			"sorcer.core.provider.ServiceTasker",
 			new String[] { "classpath:/config/SampleService.config" }
