--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -131,5 +131,10 @@
 			<artifactId>ant-contrib</artifactId>
 			<version>1.0b3</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-ui</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+    </dependencies>
 </project>
