--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-sui/pom.xml
@@ -21,5 +21,10 @@
 			<artifactId>sos-platform</artifactId>
             <version>${v.sorcer}</version>
 		</dependency>
+        <dependency>
+            <groupId>net.jini.lookup</groupId>
+            <artifactId>serviceui</artifactId>
+            <version>2.2.1</version>
+        </dependency>
 	</dependencies>
 </project>
