Changed run-prv scripts to use Booter.resolveCodebase - this allows an easier specification of jars by artifacts and fixes problems with the network on Linux when hostname is not resolvable

--- a/configs/startup-prv.config
+++ b/configs/startup-prv.config
@@ -4,6 +4,8 @@
 import com.sun.jini.config.ConfigUtil;
 import com.sun.jini.start.NonActivatableServiceDescriptor;
 import com.sun.jini.start.ServiceDescriptor;
+import sorcer.provider.boot.Booter;
+import sorcer.provider.boot.SorcerServiceDescriptor;
 
 com.sun.jini.start {
     private static codebase="${sorcer.provider.codebase}";
@@ -14,8 +16,8 @@ com.sun.jini.start {
 
     static serviceDescriptors = new ServiceDescriptor[] {
         new NonActivatableServiceDescriptor(
-            codebase, 
-	    	policy,
+            Booter.resolveCodebase(codebase),
+            policy,
             classpath,
             impl,
             new String[] { config }
