--- a/examples/ex2/ex2-prv/pom.xml
+++ b/examples/ex2/ex2-prv/pom.xml
@@ -23,6 +23,7 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-boot</artifactId>
             <version>${v.sorcer}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
