Fixed version in ex0, added ex0 to distribution, added webster.internal to all requestor scripts

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -160,6 +160,21 @@
         <!-- Examples -->
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ex0-prv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ex0-req</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ex0-sui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>ex1-prv</artifactId>
             <version>${project.version}</version>
         </dependency>
