Cleanup. Old sbin scripts packed to bin/sbin_old_scripts.zip, some unnecessary files removed

--- a/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
@@ -18,7 +18,7 @@ com.sun.jini.start {
 			policy,
 			Booter.resolveClasspath(new String[] {
 //			    "org.sorcersoft.sorcer:ju-arithmetic-api",
-			    "org.sorcersoft.sorcer:ju-arithmetic-prv:1.0-SNAPSHOT",
+			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
                 runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
@@ -27,13 +27,13 @@ com.sun.jini.start {
 
 		new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
- 			    "org.sorcersoft.sorcer:ju-arithmetic-api:1.0-SNAPSHOT",
+ 			    "org.sorcersoft.sorcer:ju-arithmetic-api",
  			    "org.sorcersoft.sorcer:sos-platform"
             }),
 			policy,
 			Booter.resolveClasspath(new String[] {
 //			    "org.sorcersoft.sorcer:ju-arithmetic-api",
-			    "org.sorcersoft.sorcer:ju-arithmetic-prv:1.0-SNAPSHOT",
+			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
                 runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
@@ -42,13 +42,13 @@ com.sun.jini.start {
 
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
- 			    "org.sorcersoft.sorcer:ju-arithmetic-api:1.0-SNAPSHOT",
+ 			    "org.sorcersoft.sorcer:ju-arithmetic-api",
  			    "org.sorcersoft.sorcer:sos-platform"
             }),
 			policy,
             Booter.resolveClasspath(new String[] {
 //			    "org.sorcersoft.sorcer:ju-arithmetic-api",
-			    "org.sorcersoft.sorcer:ju-arithmetic-prv:1.0-SNAPSHOT",
+			    "org.sorcersoft.sorcer:ju-arithmetic-prv",
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
@@ -57,13 +57,13 @@ com.sun.jini.start {
 
         new SorcerServiceDescriptor(
             Booter.resolveCodebase(new String[]{
-				"org.sorcersoft.sorcer:ju-arithmetic-api:1.0-SNAPSHOT",
+				"org.sorcersoft.sorcer:ju-arithmetic-api",
 				"org.sorcersoft.sorcer:sos-platform"
             }),
             policy,
             Booter.resolveClasspath(new String[] {
 //				"org.sorcersoft.sorcer:ju-arithmetic-api",
-                "org.sorcersoft.sorcer:ju-arithmetic-prv:1.0-SNAPSHOT",
+                "org.sorcersoft.sorcer:ju-arithmetic-prv",
                 runtimeClasspath
             }),
             "sorcer.core.provider.ServiceTasker",
