--- a/examples/ex0/ex0-prv/src/main/resources/config/services.config
+++ b/examples/ex0/ex0-prv/src/main/resources/config/services.config
@@ -16,15 +16,15 @@ com.sun.jini.start {
 
 		new SorcerServiceDescriptor(
 			Booter.resolveCodebase(new String[]{
-				"org.sorcersoft.sorcer:ex0-api:1.0-SNAPSHOT",
-			    "org.sorcersoft.sorcer:ex0-sui:1.0-SNAPSHOT",
+				"org.sorcersoft.sorcer:ex0-api",
+			    "org.sorcersoft.sorcer:ex0-sui",
 				"org.sorcersoft.sorcer:sos-platform"
 			}),
 			policy,
 			Booter.resolveClasspath(new String[]{
-				"org.sorcersoft.sorcer:ex0-api:1.0-SNAPSHOT",
-			    "org.sorcersoft.sorcer:ex0-sui:1.0-SNAPSHOT",
-				"org.sorcersoft.sorcer:ex0-prv:1.0-SNAPSHOT"
+				"org.sorcersoft.sorcer:ex0-api",
+			    "org.sorcersoft.sorcer:ex0-sui",
+				"org.sorcersoft.sorcer:ex0-prv"
 			}),
 			"sorcer.core.provider.ServiceTasker",
 			new String[] { "classpath:/config/HelloWorld.config" }
