--- a/examples/ex6/ex6-prv/pom.xml
+++ b/examples/ex6/ex6-prv/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-        	<version>${v.sorcer}</version>
+        	<version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -34,12 +34,12 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
-            <version>${v.sorcer}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>dbp-prv</artifactId>
-            <version>${v.sorcer}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.river</groupId>
