--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/pom.xml
@@ -23,12 +23,12 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
-            <version>${v.sorcer}</version>
+            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>commons-prv</artifactId>
-			<version>${v.sorcer}</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<!-- CodeBase -->
