--- a/examples/ex2/ex2-api/pom.xml
+++ b/examples/ex2/ex2-api/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-        	<version>${v.sorcer}</version>
+        	<version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
