--- a/examples/ex5/ex5-req/pom.xml
+++ b/examples/ex5/ex5-req/pom.xml
@@ -30,22 +30,22 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
-        	<version>${v.sorcer}</version>
+        	<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>commons-req</artifactId>
-			<version>${v.sorcer}</version>
+			<version>${project.version}</version>
 		</dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-boot</artifactId>
-            <version>${v.sorcer}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-webster</artifactId>
-            <version>${v.sorcer}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
