--- a/examples/ex6/ex6-sui/pom.xml
+++ b/examples/ex6/ex6-sui/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-            <version>${v.sorcer}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>net.jini.lookup</groupId>
