--- a/examples/first/pom.xml
+++ b/examples/first/pom.xml
@@ -50,7 +50,7 @@
 			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sos-platform</artifactId>
-				<version>${v.sorcer}</version>
+				<version>${project.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
