--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-proxy/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-proxy/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
-            <version>${v.sorcer}</version>
+            <version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
