--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -36,7 +36,7 @@
     </dependencyManagement>
 
     <properties>
-        <v.sorcer>1.0-SNAPSHOT</v.sorcer>
+        <v.sorcer>${project.version}</v.sorcer>
         <v.jini>2.2.1</v.jini>
         <v.blitz>2.1.7</v.blitz>
         <v.sleepycat>4.1.21</v.sleepycat>
